--- a/Public/RemoveBlocks/About.html
+++ b/Public/RemoveBlocks/About.html
@@ -29,9 +29,8 @@ width:190px;
 
 <script>
 'use strict'
-function BackToGame()
-{
-var forma=document.getElementById('forma1');
+function BackToGame(){
+  var forma=document.getElementById('forma1');
   forma.action="/public/RemoveBlocks/index.html";
 }
 </script>
